--- a/cat-photo-app/index.html
+++ b/cat-photo-app/index.html
@@ -10,18 +10,36 @@
   <body>
     <!-- Títulos -->
     <h1>CatPhotoApp</h1>
-    <h2>Cat Photos</h2>
-    <!-- Paragrafo de texto -->
-    <p>
-      <!-- Link para outra página -->
-      See more
-      <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in
-      our gallery.
-    </p>
-    <!-- Imagem -->
-    <img
-      src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
-      alt="Cat image"
-    />
+
+    <section>
+      <h2>Cat Photos</h2>
+      <!-- Paragrafo de texto -->
+      <p>
+        <!-- Link para outra página -->
+        See more
+        <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in
+        our gallery.
+      </p>
+      <!-- Imagem -->
+      <a
+        href="https://freecatphotoapp.com"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+          alt="Cat image"
+        />
+      </a>
+    </section>
+    <section>
+      <h2>Cat Lists</h2>
+      <h3>Things cats love:</h3>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+    </section>
   </body>
 </html>
