Styles in Odin-Recipes

--- a/projects/odin-recipes/index.html
+++ b/projects/odin-recipes/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../projects/odin-recipes/styles/style.css">
     <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./pages/recipes/lasagna.html">Lasagna Recipe</a></li>
-      <li><a href="./pages/recipes/caeser-salad.html">Salad Recipe</a></li>
-      <li><a href="./pages/recipes/burguer.html">Burguer Recipe</a></li>
+      <li class="recipes"><a href="./pages/recipes/lasagna.html">Lasagna Recipe</a></li>
+      <li class="recipes"><a href="./pages/recipes/caeser-salad.html">Salad Recipe</a></li>
+      <li class="recipes"><a href="./pages/recipes/burguer.html">Burguer Recipe</a></li>
     </ul>
   </body>
 </html>
