--- a/projects/odin-recipes/pages/recipes/burguer.html
+++ b/projects/odin-recipes/pages/recipes/burguer.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/recipe.css">
     <title>Burguer Recipe</title>
   </head>
   <body>
     <h1>Burguer Recipe</h1>
-    <img src="../../assets/images/burguer.jpg" alt="Burguer" />
+    <img class="image" src="../../assets/images/burguer.jpg" alt="Burguer" />
     <h2>Description</h2>
     <p>This is a burguer recipe.</p>
     <h3>Ingredients</h3>
@@ -22,5 +23,6 @@
       <li>Cook the burguer.</li>
       <li>Put it all together.</li>
     </ol>
+    <button><a href="../../index.html">Back to Home</a></button>
   </body>
 </html>
