--- a/projects/odin-recipes/pages/recipes/caeser-salad.html
+++ b/projects/odin-recipes/pages/recipes/caeser-salad.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/recipe.css">
     <title>Salad Recipe</title>
   </head>
   <body>
     <h1>Caeser Salad Recipe</h1>
-    <img src="../../assets/images/caesar-salad.jpg" alt="Caesar Salad" />
+    <img class="image" src="../../assets/images/caesar-salad.jpg" alt="Caesar Salad" />
     <h2>Description</h2>
     <p>This is a salad recipe.</p>
     <h3>Ingredients</h3>
@@ -23,5 +24,6 @@
       <li>Make salad.</li>
       <li>Make dressing.</li>
     </ol>
+    <button><a href="../../index.html">Back to Home</a></button>
   </body>
 </html>
