--- a/projects/odin-recipes/pages/recipes/lasagna.html
+++ b/projects/odin-recipes/pages/recipes/lasagna.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../styles/recipe.css">
     <title>Lasagna Recipe</title>
   </head>
   <body>
     <h1>Lasagna Recipe</h1>
-    <img src="../../assets/images/lasagna.jpeg" alt="Lasagna" />
+    <img class="image" src="../../assets/images/lasagna.jpeg" alt="Lasagna" />
     <h2>Description</h2>
     <p>This is a lasagna recipe.</p>
     <h3>Ingredients</h3>
@@ -22,5 +23,6 @@
       <li>Assemble the lasagna.</li>
       <li>Put it on the oven.</li>
     </ol>
+    <button><a href="../../index.html">Back to Home</a></button>
   </body>
 </html>
