--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700&display=swap"
+    rel="stylesheet">
   <title>Project - Landing Page</title>
 </head>
 <body>
@@ -15,41 +20,57 @@
     </ul>
   </div>
   <div class="landing">
-    <h1>This Website is Awesome</h1>
-    <p>
-      This website has some text that goes here under the main title. 
-      It's a smaller font and the color is lower contrast.
-    </p>
-    <button>Sign Up</button>
-    <img src="" alt="An Image">
+    <div class="landing-content">
+      <h1>This Website is Awesome</h1>
+      <p>
+        This website has some text that goes here under the main title. 
+        It's a smaller font and the color is lower contrast.
+      </p>
+      <button>Sign Up</button>
+    </div>
+    <div class="image-placeholder">
+      <p>Image Placeholder</p>
+    </div>
   </div>
   <div class="info">
     <h2>Some Random Information</h2>
-    <div class="card">
-      <img src="" alt="image">
-      <p>this is some subtext under an ilustration or image</p>
-    </div>
-    <div class="card">
-      <img src="" alt="image">
-      <p>this is some subtext under an ilustration or image</p>
-    </div>
-    <div class="card">
-      <img src="" alt="image">
-      <p>this is some subtext under an ilustration or image</p>
-    </div>
-    <div class="card">
-      <img src="" alt="image">
-      <p>this is some subtext under an ilustration or image</p>
+    <div class="carousel">
+      <div class="card">
+        <div class="border-image"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
+      <div class="card">
+        <div class="border-image"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
+      <div class="card">
+        <div class="border-image"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
+      <div class="card">
+        <div class="border-image"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
     </div>
   </div>
   <div class="quote">
-    <p>This is an inspiring quote</p>
-    <p>Thor God of Thunder</p>
+    <p class="main-text">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Inventore delectus nisi in velit dolore similique dolor qui quibusdam totam, 
+      praesentium perspiciatis quasi vero, molestias dignissimos, 
+      consequuntur repellendus sequi dolores consectetur. 
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Accusamus totam aliquid laborum architecto quae cupiditate voluptate deserunt earum quis,
+      praesentium incidunt ea, quibusdam eos et ducimus soluta harum illum deleniti.
+    </p>
+    <p class="author"> - Thor God of Thunder</p>
   </div>
   <div class="action">
     <div class="blue">
-      <h4>Call for Action!</h4>
-      <p>It's time to buy something!</p>
+      <div class="left">
+        <h4>Call for Action!</h4>
+        <p>It's time to buy something!</p>
+      </div>
       <button>Sign Up</button>
     </div>
   </div>
