Interface base PPT

--- a/projects/rock-paper-scissors/index.html
+++ b/projects/rock-paper-scissors/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Projeto - PPT</title>
   </head>
   <body>
-    <h1>Execução no console.</h1>
-    <script src="script.js"></script>
+    <div class="container">
+      <h1>Pedra - Papel - Tesoura</h1>
+      <h2>Escolha uma opção:</h2>
+      <div class="options">
+        <button onclick="">Pedra</button>
+        <button onclick="">Papel</button>
+        <button onclick="">Tesoura</button>
+      </div>
+    </div>
   </body>
 </html>
